More updates and some scripting

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                         <div class="iconBox">
                             <i class="devicon-git-plain"></i>
                         </div>
-                        <p>git</p>
+                        <p>Git</p>
                     </li>
                     <li>
                         <div class="iconBox">
                             <i class="devicon-github-plain"></i>
                         </div>
-                        <p>github</p>
+                        <p>GitHub</p>
                     </li>
                     <li>
                         <div class="iconBox">
@@ -191,7 +191,7 @@
                         </div>
                         <div class="overlay">
                             <h3>Dine and Dash</h3>
-                            <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, in helps find the nearest City Bike station for a swift escape!</p>
+                            <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, it finds the nearest City Bike station for a swift escape!</p>
                             <p>
                                 <a href="http://dineanddash.laurenhetherington.com" class="button">View live</a>
                                 <a href="https://github.com/dineAndDashJuno/projectSix" class="button">View code</a>
@@ -216,15 +216,6 @@
                                 </p>
                             </div>
                         </li>
-                        <!-- <li>
-                            <i class="fas fa-phone-alt"></i>
-                            <div>
-                                <h3>Call me</h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, beatae!
-                                </p>
-                            </div>
-                        </li> -->
                         <li>
                             <i class="far fa-envelope"></i>
                             <div>
@@ -235,7 +226,7 @@
                             </div>
                         </li>
                     </ul>
-                    <form action="https://formspree.io/mvozpoyk" method="POST">
+                    <form action="https://formspree.io/mvozpoyk" method="POST" autocomplete="off">
                         <label class="visuallyHidden" for="name">Name</label>
                         <input type="text" name="name" id="name" placeholder="Name">
                         <label class="visuallyHidden"  for="email">Email</label>
@@ -271,5 +262,7 @@
             <p>2019. All Rights Reserved. Hero photo by Colin Maynard on Unsplash.</p>
         </div>
     </footer>
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
