Editted some of the text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="column">
                         <p>
-                            Hi there, I'm Lauren! I'm a front-end web developer based in Toronto, recently graduated from the Juno College of Technology. Before that, I come from an Astronomy and Astrophysics background. I'm passionate about learning new technologies, writing robust code, and strong collaboration!
+                            Hi there, I'm Lauren! I'm a front-end web developer based in Toronto, recently graduated from the Juno College of Technology. Before that, I come from an Astronomy and Astrophysics background. I love to find creative solutions to technical challenges. I'm passionate about learning new technologies, writing robust code, and strong collaboration!
                         </p>
                         <div class="socialLinks">
                             <a href="https://twitter.com/laurheth">
@@ -191,7 +191,7 @@
                         </div>
                         <div class="overlay">
                             <h3>Dine and Dash</h3>
-                            <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, it finds the nearest City Bike station for a swift escape!</p>
+                            <p>A React.js project built with a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, it finds the nearest City Bike station for a swift escape!</p>
                             <p>
                                 <a href="http://dineanddash.laurenhetherington.com" class="button">View live</a>
                                 <a href="https://github.com/dineAndDashJuno/projectSix" class="button">View code</a>
@@ -259,7 +259,7 @@
                     <span class="visuallyHidden">Go to Lauren's LinkedIn.</span>
                 </a>
             </div>
-            <p>2019. All Rights Reserved. Hero photo by Colin Maynard on Unsplash.</p>
+            <p>2019. All Rights Reserved. Hero photo by Colin Maynard.</p>
         </div>
     </footer>
     <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
