Different form handler

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             </div>
                         </li>
                     </ul>
-                    <form action="https://formspree.io/mvozpoyk" method="POST" autocomplete="off">
+                    <form action="http://www.focuspocus.io/magic/ef0300962c08051a7649d5002d090256" method="POST" autocomplete="off">
                         <label class="visuallyHidden" for="name">Name</label>
                         <input type="text" name="name" id="name" placeholder="Name">
                         <label class="visuallyHidden"  for="email">Email</label>
