Spacing in footer.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
                     <span class="visuallyHidden">Go to Lauren's LinkedIn.</span>
                 </a>
             </div>
-            <p>2019. All Rights Reserved. Hero photo by Colin Maynard.</p>
+            <div class="right">
+                <p>2019. All Rights Reserved.</p>
+                <p>Hero photo by Colin Maynard.</p>
+            </div>
         </div>
     </footer>
     <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
