Spelling error, whoops.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <div>
                                 <h3>Write me</h3>
                                 <p>
-                                    You can reach my by e-mail on this form. I look forward to hearing from you!
+                                    You can reach me by e-mail via this form. I look forward to hearing from you!
                                 </p>
                             </div>
                         </li>
