--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <h2>
                     Lauren
                 </h2>
-                <ul>
+                <div class="hamburger">
+                    <button class="hamburgerButton"><i class="fas fa-bars"></i></button>
+                </div>
+                <ul class="menu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
