Small changes to clean up the code a bit.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                     Lauren
                 </h2>
                 <div class="hamburger">
-                    <button class="hamburgerButton"><i class="fas fa-bars"></i></button>
+                    <button class="hamburgerButton">
+                        <i class="fas fa-bars"></i>
+                    </button>
                 </div>
                 <ul class="menu">
                     <li><a href="#home">Home</a></li>
@@ -39,7 +41,6 @@
                 <p>Hello!</p>
                 <h1>I am Lauren Hetherington</h1>
                 <h2>Front-end web developer</h2>
-                <!-- <a href="#" class="button">Download resume</a> -->
             </div>
         </div>
         <div class="background"></div>
