Updated portfolio to include PacLauren

--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                 <div class="grid">
                     <div class="itemContainer">
                         <div class="imgContainer">
-                            <img src="assets/questionableQuestions.png" alt="">
+                            <img src="assets/pacLauren.png" alt="">
                         </div>
                         <div class="overlay">
-                            <h3>Questionable Questions</h3>
-                            <p>A React.js app, built on firebase, for asking questions, giving answers, and then voting for the best ones!</p>
+                            <h3>Pac-Lauren</h3>
+                            <p>A recreation of the classic game of Pac-Man! Eat all of the pellets and avoid getting captured by the ghosts. Written entirely in JavaScript, CSS, and HTML.</p>
                             <p>
-                                <a href="http://questions.laurenhetherington.com/" class="button">View live</a>
-                                <a href="https://github.com/laurheth/laurenHetheringtonProjectFive" class="button">View code</a>
+                                <a href="http://pacman.laurenhetherington.com/" class="button">View live</a>
+                                <a href="https://github.com/laurheth/pac-lauren" class="button">View code</a>
                             </p>
 
                         </div>
